--- a/Another Hero/Another Hero.vcxproj
+++ b/Another Hero/Another Hero.vcxproj
@@ -152,11 +152,15 @@
     <Text Include="Textures\Icons34x34byAilsEnglish2013\Readme.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Character.h" />
+    <ClInclude Include="Stats.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Another Hero.cpp" />
+    <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Stats.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
