--- a/Another Hero/Another Hero.vcxproj
+++ b/Another Hero/Another Hero.vcxproj
@@ -152,21 +152,27 @@
     <Text Include="Textures\Icons34x34byAilsEnglish2013\Readme.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Character.h" />
-    <ClInclude Include="Stats.h" />
+    <ClInclude Include="character.h" />
+    <ClInclude Include="encounter.h" />
+    <ClInclude Include="start.h" />
+    <ClInclude Include="stats.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="world.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Another Hero.cpp" />
-    <ClCompile Include="Character.cpp" />
-    <ClCompile Include="Stats.cpp" />
+    <ClCompile Include="another_hero.cpp" />
+    <ClCompile Include="character.cpp" />
+    <ClCompile Include="encounter.cpp" />
+    <ClCompile Include="start.cpp" />
+    <ClCompile Include="stats.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="world.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Textures\Icons34x34byAilsEnglish2013\Ac_Medal01.png" />
