--- a/Another Hero/Another Hero.vcxproj.filters
+++ b/Another Hero/Another Hero.vcxproj.filters
@@ -1280,4 +1280,7 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="Fonts\calibri.ttf" />
+  </ItemGroup>
 </Project>
